# clean

./: .vimrc  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: cmd.rs  conf.rs  error.rs  lib.rs  main.rs  test.rs
tests/: clean.rs
