[package]
name = "clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
  "io-util",
  "io-std",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
future-utils = "0.12"
futures = "0.3"
async-recursion = "1.0"
home = "0.5"

[dev-dependencies]

[profile.release]
debug = 0
lto = "fat"
opt-level = "z"
strip = true
