[package]
name = "clean-rs"
version = "0.1.8"
edition = "2021"
description = "Project clean tools support rust, golang, maven and gradle projects out of the box"
authors = ["feexon"]
repository = "https://github.com/holi-java/clean"
license = "MIT"
readme = "./README.md"
rust-version = "1.71"
keywords = ["cli", "tools", "clean-tools"]
categories = ["cli", "tools"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
  "io-util",
  "io-std",
  "sync",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
future-utils = "0.12"
futures = "0.3"
async-recursion = "1.0"
home = "0.5"
num_cpus = "1.16.0"
termcolor = "1.2"
path-absolutize = "3.1"
remove_dir_all = { version = "0.8.2", features = ["parallel"] }
anyhow = { version = "1.0", features = ["backtrace"] }

[dev-dependencies]

[profile.release]
debug = 0
lto = "fat"
opt-level = "z"
strip = true

[[bin]]
name = "clean"
path = "src/main.rs"
